# friendlyvid

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs
src/commands/: clip_commands.rs  mod.rs  transform_commands.rs  transition_commands.rs
src/media/: engine.rs  frame_grabber.rs  mod.rs
src/model/: clip.rs  mod.rs  project.rs  text_overlay.rs  timeline.rs  track.rs  transition.rs
src/state/: app_state.rs  mod.rs  playhead.rs  selection.rs
src/ui/: font_manager.rs  layout.rs  media_browser.rs  mod.rs  preview.rs  timeline_widget.rs  toolbar.rs
src/util/: time.rs
tests/: font_test.rs
