[package]
name = "friendlyvid"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# GUI
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "persistence", "x11", "wayland"] }
egui = "0.33"
egui_extras = { version = "0.33", features = ["image"] }

# GStreamer
gstreamer = { version = "0.25", features = ["v1_20"] }
gstreamer-app = "0.25"
gstreamer-video = "0.25"
gstreamer-audio = "0.25"
gstreamer-pbutils = "0.25"
gstreamer-editing-services = { version = "0.25", features = ["v1_20"] }
gstreamer-controller = "0.25"

# Text measurement (match GStreamer's Pango rendering)
pango = "0.22"
pangocairo = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
rfd = "0.15"
winit = "=0.30.12"
font-kit = "0.14"

[profile.release]
opt-level = 3
lto = "thin"
